# ssl-visual-planner

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  Visual_Planner.pro  agentplanclass.cpp  agentplanclass.h  base.h  client.cpp  client.h  compile.sh  july19-2-30am.db  kkagentplanclass.cpp  kkplayoffplansql.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playoff.cpp  playoff.h  playoffplansql.cpp  playoffplansql.h  playon.cpp  playon.h  playonplansql.cpp  playonplansql.h  receive.cpp  receive.h  resource.qrc  server.cpp  server.h  ssl-playbook.pb.h  ssl-playbook.proto  tags.h
Client/: VPClient.pro  client.cpp  client.h  main.cpp  ssl-playbook.pb.cc
include/: base.h  mainwindow.h  playoff.h  playoffplansql.h  playon.h  playonplansql.h  tags.h
play-off/: playoff.cpp  playoff.h
play-on/: forcestart.cpp  forcestart.h  playonrole.cpp  playonrole.h
src/: agentplanclass.cpp  main.cpp  mainwindow.cpp  playoff.cpp  playon.cpp  playonplansql.cpp  server.cpp  tags.cpp
ui/: mainwindow.ui  resource.qrc  tags.ui
visual-planner/: .gitignore  README.md  Visual_Planner.pro  base.h  kkagentplanclass.cpp  kkagentplanclass.h  kkplayoffplansql.h  kkplayonplansql.cpp  kkplayonplansql.h  kkpoplansql.cpp  kkpoplansql.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playoff.cpp  playoff.h  playon.cpp  playon.h  tags.cpp
visual-planner/.svn/: wc.db
visual-planner/data/: setting.ini
